# oea_navigation_sdk

./: .gitignore  .gitmodules  LICENSE  README.md  mcp.md  pyproject.toml  requirements.txt
move/: atom_client.py  atom_server.py  commands.txt  data_client.py  data_server.py  hist.txt  navigation_data_server.py
navigation_mcp/: __init__.py  bridge.py  models.py  navigator.py  perception.py  sam3_worker.py  server.py
tests/: test_go2_transport.py  test_navigation_engine.py
