[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "go2-navigation-mcp"
version = "0.1.0"
description = "MCP server for RGB-D target search and navigation on Unitree Go2."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==1.26.4",
  "Pillow",
  "websockets",
  "scipy",
  "opencv-python-headless",
  "torch",
  "torchvision",
  "ultralytics",
]

[project.scripts]
go2-navigation-mcp = "navigation_mcp.server:main"

[tool.setuptools]
packages = ["navigation_mcp"]
